--- a/css/style.css
+++ b/css/style.css
@@ -1,147 +1,243 @@
 * {
-  box-sizing: border-box;
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
+  list-style: none;
+  text-decoration: none;
 }
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  margin: 0 auto;
   background-color: #f7f7f7;
-  height: 1000px;
+  font-family: Arial, Helvetica;
 }
-/* 
-  header
-*/
-.header {
+main {
+  max-width: 1000px;
+  margin: 0 auto;
+}
+header {
+  margin: 0 auto;
+}
+header {
+  max-width: 1000px;
   text-align: center;
-  margin: 60px 0;
+  margin-top: 40px;
+  margin-bottom: 40px;
 }
-.header img {
-  display: inline-block;
-  max-width: 100%;
-}
-.menu-lista {
+.nav-lista {
   display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  list-style: none;
-  gap: 10px;
   justify-content: center;
-  align-items: center;
-  margin: 50px 0;
+  gap: 10px;
+  margin-top: 20px;
+  flex-wrap: wrap;
 }
-.menu-item a {
-  display: inline-block;
+.nav-lista a {
   background-color: #fff;
-  text-decoration: none;
+  flex: 0 1 110px;
+  padding: 10px 15px;
+  border-radius: 2px;
   text-transform: uppercase;
-  padding: 10px 20px;
-  flex: 1;
-  color: black;
-  border-radius: 4px;
+  color: #000;
+  border: 2px solid transparent;
 }
-/* 
-  PRINCIPAL
-*/
+.nav-lista a:hover {
+  border: 2px solid #ee2211;
+}
 .principal {
   display: grid;
-  justify-content: center;
-  align-items: center;
-  background-color: #f7f7f7;
-  margin: 0 150px;
-  display: inline-block;
-  /* padding: 0 100px; */
-}
-.introducao {
-  background-color: #fff;
-  display: grid;
   grid-template-columns: 1fr 1fr;
-  background-color: #fff;
 }
-.introducao-conteudo {
+.principal-conteudo {
+  background-color: #fff;
+  padding: 40px;
   display: flex;
   flex-direction: column;
-  gap: 50px;
   justify-content: center;
-  padding: 40px;
-}
-.introducao-conteudo .titulo {
+  gap: 15px;
   text-align: right;
-  font-size: 30px;
 }
-.introducao-conteudo p {
-  text-align: right;
-  font-size: 18px;
-  line-height: 1.5;
+.principal-conteudo h1 {
+  font-size: 32px;
+  line-height: 1.3;
 }
-.container-img {
-  background-color: #f7f7f7;
+.principal-conteudo p {
+  font-size: 20px;
 }
-.introducao img {
-  max-width: 100%;
-  display: inline-block;
-}
-.btn {
-  /* width: 120px; */
-  align-self: end;
-  border: 0;
+.principal-btn {
+  cursor: pointer;
+  padding: 15px 30px;
+  align-self: flex-end;
+  border-radius: 2px;
+  border: none;
   background-color: #ee2211;
-  border-radius: 4px;
-  display: inline-block;
-  padding: 15px 20px;
-}
-.btn a {
   color: #fff;
-  text-decoration: none;
-  font-size: 16px;
   text-transform: uppercase;
 }
-.vantagens {
+.principal-btn:hover {
+  background-color: #990000;
+}
+.principal-img {
+  background-color: #f7f7f7;
+}
+.principal img {
+  max-width: 100%;
+  display: block;
+  object-fit: cover;
+  height: 100%;
+}
+.principal-vantagens {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  background-color: #fff;
-}
-.vantagens div {
-  display: grid;
   background-color: #f7f7f7;
-  align-items: center;
+  /* height: 500px; */
 }
-.vantagens-titulo h3 {
-  font-size: 65px;
+.vantagens-titulo {
+  font-size: 44px;
   display: flex;
-  word-break: break-word;
-  padding: 60px;
-  color: #C6C6C6;
+  justify-content: center;
+  align-items: center;
+  text-transform: uppercase;
+  color: #c6c6c6;
+  padding: 40px;
+  text-align: end;
+}
+.vantagens-titulo {
+  background-image: url(../img/onda.svg);
+  align-self: center;
   text-align: right;
 }
-.vantagens-titulo{
-  text-align: center;
+.vantagens-titulo h2 {
+  /* word-break: break-all; */
 }
 .vantagens-conteudo {
   display: grid;
-  gap: 40px;
-  margin: 60px 0;
+  padding: 40px;
+  background-color: #fff;
 }
-.vantagens-conteudo li {
+.vantagens-lista {
   display: grid;
   grid-template-columns: auto 1fr;
   gap: 10px;
-  background-color: #fff;
-  padding: 0 80px;
-  list-style: none;
+  border-left: 5px solid transparent;
+  padding: 25px 10px;
 }
-.vantagens-conteudo img {
-  display: inline-block;
+.vantagens-lista p {
+  font-size: 20px;
+  line-height: 1.3;
 }
-.vantagens-conteudo div {
-  background-color: #fff;
+.vantagens-lista:nth-child(odd) {
+  background-color: #f7f7f7;
 }
-.vantagens h3 {
-  margin-bottom: 15px;
+.vantagens-lista:hover {
+  border-left: 5px solid #ee2211;
 }
-.footer{
-  padding: 30px 0;
-  margin-top: 50px;
-  font-size: 18px;
+.rodape {
   text-align: center;
   background-color: #fff;
+  margin-top: 50px;
+  padding: 30px 0;
+  width: 100%;
+  font-size: 1.25rem;
+}
+
+/* MEDIA QUERY */
+@media (max-width: 1000px) {
+  .media-one-collumn {
+    grid-template-columns: 1fr;
+  }
+}
+@media (max-width: 860px) {
+  .vantagens-titulo h2 {
+    font-size: 44px;
+    text-align: center;
+  }
+}
+@media (max-width: 610px) {
+  .principal {
+    grid-template-columns: 1fr;
+  }
+
+  .vantagens-titulo {
+    font-size: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-transform: uppercase;
+    color: #c6c6c6;
+    padding: 40px;
+    text-align: center;
+  }
+}
+
+@media (max-width: 500px) {
+  .nav-lista a {
+    font-size: 16px;
+  }
+  .principal-conteudo {
+    text-align: center;
+  }
+  .principal-conteudo p {
+    font-size: 16.5px;
+  }
+  .principal-btn {
+    padding: 10px;
+  }
+  .vantagens-titulo h2 {
+    font-size: 35px;
+  }
+  .vantagens-lista h3 {
+    font-size: 18px;
+  }
+  .vantagens-lista p {
+    font-size: 16px;
+  }
+  .rodape {
+    margin-top: 30px;
+    font-size: 16px;
+  }
+}
+
+@media (max-width: 300px) {
+  .nav-lista a {
+    font-size: 15px;
+    flex: 0 1 110px;
+    padding: 2.5px 0;
+    gap: 20px;
+  }
+  .principal-conteudo {
+    text-align: center;
+    padding: 10px;
+  }
+  .principal-conteudo h1 {
+    font-size: 25px;
+  }
+  .principal-conteudo p {
+    font-size: 16px;
+  }
+  .principal-img {
+    display: none;
+  }
+  .principal-btn {
+    padding: 8px;
+    font-size: 12px;
+    align-self: center;
+  }
+  .vantagens-titulo h2 {
+    font-size: 20px;
+  }
+  .vantagens-titulo {
+    padding: 20px;
+  }
+  .vantagens-lista h3 {
+    font-size: 16px;
+  }
+  .rodape {
+    margin-top: 15px;
+    font-size: 14px;
+  }
+  .vantagens-conteudo {
+    padding: 0px;
+  }
+  .vantagens-lista img{
+    display: none;
+  }
 }
